@@ -1,4 +1,4 @@
-FROM openjdk:8-jre-alpine
+FROM openjdk:8u181-jre-alpine3.8
 COPY target/pazuzu-registry.jar /pazuzu-registry.jar
 EXPOSE 8080 8081
-CMD java $JAVA_OPTS $(appdynamics-agent) $(java-dynamic-memory-opts) -jar /pazuzu-registry.jar
+CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar /pazuzu-registry.jar
